--- a/css/style.css
+++ b/css/style.css
@@ -7311,7 +7311,7 @@ h1, h2, h3, h4, h5,
   top: 10px; }
   @media (max-width: 991.98px) {
     .ftco-navbar-light {
-      background: #000 !important;
+      /* background: #000 !important; */
       top: 0;
       position: relative; } }
   .ftco-navbar-light .navbar-brand {
@@ -7325,7 +7325,7 @@ h1, h2, h3, h4, h5,
     padding-bottom: .9rem;
     padding-left: 20px;
     padding-right: 20px;
-    color: rgba(255, 255, 255, 0.8);
+    /* color: rgba(255, 255, 255, 0.8); */
     font-weight: 400;
     opacity: 1 !important; }
     .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:hover {
@@ -7383,7 +7383,7 @@ h1, h2, h3, h4, h5,
     color: #f86f2d; }
   .ftco-navbar-light .navbar-toggler {
     border: none;
-    color: rgba(255, 255, 255, 0.5) !important;
+    /* color: rgba(255, 255, 255, 0.5) !important; */
     cursor: pointer;
     padding-right: 0;
     text-transform: uppercase;
